# opencoffee

./: .gitignore  .pylintrc  LICENSE  README.md  config-sample.ini  pyproject.toml
opencoffee/: __init__.py  utils.py
opencoffee/errors/: __init__.py
opencoffee/locales/: base.pot
opencoffee/locales/it/LC_MESSAGES/: messages.mo  messages.po
opencoffee/messaging_api_wrappers/: generic_messaging_api_wrapper.py  slack_connector.py  slack_wrapper.py
opencoffee/messaging_api_wrappers/pair_generator_algorithms/: generic_pair_generator_algorithm.py
opencoffee/pair_generator_algorithms/: generic_pair_generator_algorithm.py  max_distance_algorithm_generator_algorithm.py  simple_generator_algorithm.py
opencoffee/services/: genericserviceconnector.py  slackconnector.py
tests/: helper_connector.py  helper_messaging_api_wrapper.py  helperconnector.py  test_main.py
